--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jquery": "^3.3.1",
     "mydatepicker": "^2.6.2",
     "ng-pick-datetime": "^5.1.3",
+    "ngx-loading": "^1.0.14",
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
